[package]
name = "bitzn"
version = "0.1.0"
authors = ["Geoff Cant <nem@erlang.geek.nz>"]

[dependencies.zinc]
git = "https://github.com/hackndev/zinc.git"
branch = "master"
features = ["mcu_stm32f4"]

# We need to add this dependency explicitly to use macro_zinc (to get the zinc_main annotation for main())
[dependencies.macro_zinc]
git = "https://github.com/hackndev/zinc.git"
branch = "master"

[profile.dev]
opt-level = 0
debug = false # Zinc's ld script doesn't support debug symbols (they go in a discarded section). So we disable generating them to avoid failing a build.
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'

[profile.release]
lto = true # Link Time Optimization really cuts down the size of a build
